# lancelot

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLOSURE.md  Dockerfile  LICENSE  Lancelot_Engineering_SOP_Addons.md  README.md  SECURITY.md  docker-compose.yml  entrypoint.sh  launch.ps1  launch.sh  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
config/: CAPABILITIES.md  approval_learning.yaml  connectors.yaml  governance.yaml  hive.yaml  host_write_commands.yaml  model_profiles.yaml  models.example.yaml  models.yaml  network_allowlist.yaml  router.example.yaml  router.yaml  scheduler.yaml  trust_graduation.yaml  vault.yaml
docs/: CHANGELOG.md  anti-roadmap.md  architecture.md  authoring-souls.md  comparison.md  configuration-reference.md  developing-connectors.md  developing-skills.md  governance.md  hive.md  installation.md  memory.md  production-hardening.md  quickstart.md  receipts.md  security-overview.md  security-whitepaper.md  security.md  uab.md  war-room.md
host_agent/: README.md  agent.py  install_service.bat  start_agent.bat  uninstall_service.bat
installer/: README.md  package-lock.json  package.json
lancelot_data/: CAPABILITIES.md  RULES.md  skills_registry.json
local_models/: Dockerfile  __init__.py  fetch_model.py  lockfile.py  models.lock.yaml  requirements-llm.txt  server.py  smoke_test.py
scripts/: install-uab.bat  install-uab.sh  migrate_secrets_to_vault.py  start-uab.bat  test.sh  uninstall-uab.bat
soul/: soul.yaml
(+608 files in other folders)
