[project]
name = "lancelot"
version = "0.3.0"
description = "Autonomous AI governance platform"
license = "BUSL-1.1"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "fastapi",
    "chromadb",
    "uvicorn",
    "watchdog",
    "streamlit",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "pywebview",
    "plyer",
    "cryptography",
    "pyyaml>=6.0",
    "llama-cpp-python>=0.2.0",
    "requests",
    "playwright",
    "browser-use>=0.11.0",
    "langchain-google-genai",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "python-pptx>=0.6.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-timeout",
]

[tool.uv]
# Lancelot is not an installable package — just install dependencies
package = false
